--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
-PSQL_HOST=dpg-crngem56l47c73afsmq0-a.oregon-postgres.render.com
-PSQL_USER=debasish
+# PSQL_HOST=dpg-crngem56l47c73afsmq0-a.oregon-postgres.render.com
+# PSQL_USER=debasish
+# PSQL_DATABASE=student_management_0j6j
+# PSQL_PASSWORD=6gEaoL1EOcjC0S6FX2OVXVMs80EUDU5N    
+# PSQL_PORT=5432
+# PORT=5000
+# JWT_SECRET=debasish123@4
+
+PSQL_HOST=dpg-csrml75ds78s73836kv0-a.oregon-postgres.render.com
+PSQL_USER=wardenspacedb_user
 PSQL_DATABASE=student_management_0j6j
-PSQL_PASSWORD=6gEaoL1EOcjC0S6FX2OVXVMs80EUDU5N
+PSQL_PASSWORD=Pn0iUcxivkae7kpns5bAUYaxpFuSq2BL    
 PSQL_PORT=5432
 PORT=5000
 JWT_SECRET=debasish123@4
